--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                     </div>
                     <p class="lead mb-5">I have experience creating websites, databases, and basic knowledge of blockchain. I am a proactive student who enjoys collaborating and pushing boundaries in every opportunity I have to work in a team.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/henry-geovany-vi%C3%B1es-iba%C3%B1ez-5ba917223/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/Melocaramel0"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/John91285174640"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </section>
@@ -178,31 +177,31 @@
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            Place - San Sebastian University - Emerging Tech Competition 2009
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+                            Place - San Sebastian University - Adobe Creative Jam 2008 (UI Design Category)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2
                             <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+                            Place - San Sebastian University - Emerging Tech Competition 2008
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             1
                             <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
+                            Place - Alberto Hurtado Highschool - Hackathon 2006
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             3
                             <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            Place - Alberto Hurtado Highschool  - Hackathon 2005
                         </li>
                     </ul>
                 </div>
